@@ -3,6 +3,7 @@
 	news item generates an error
 	* Fixed bug [ #597 ] Viewing aggregate survey result contains some errors
 	* Fixed bug [ #622 ] Download nightly cvs tarballs errors incorrectly
+	* Fixed bug [ #654 ] Unable to remove processor
 
 2004-02-03  Tom Copeland <tom@infoether.com>
 	* Applied patch [ #662 ] New german localization diff file
